fix/style: brokered form fields label on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -156,9 +156,9 @@ input[type="number"]::-webkit-outer-spin-button {
       // cursor: text !important;
     }
 
-    // .mdc-floating-label--float-above {
-    //   transform: translateY(-106%) scale(0.75);
-    // }
+    .mdc-floating-label--float-above {
+      transform: translateY(-106%) scale(0.75);
+    }
   }
 
   .mat-mdc-form-field-focus-overlay {
